sp-cip: fix content being cut off when resizing

--- a/packages/sp-cip/src/webparts/cip/tasks/table/TasksTable.module.scss
+++ b/packages/sp-cip/src/webparts/cip/tasks/table/TasksTable.module.scss
@@ -2,18 +2,18 @@
     max-width: 100vw;
     overflow: auto;
 
-    &::-webkit-scrollbar {
+    &::-webkit-scrollbar, & :global(.ms-DetailsList-contentWrapper)::-webkit-scrollbar {
         width: 10px;
         height: 10px;
     }
 
     /* Track */
-    &::-webkit-scrollbar-track {
+    &::-webkit-scrollbar-track, & :global(.ms-DetailsList-contentWrapper)::-webkit-scrollbar-track {
         background: '[theme: neutralLighter, default: #f4f4f4]';
     }
 
     /* Handle */
-    &::-webkit-scrollbar-thumb {
+    &::-webkit-scrollbar-thumb, & :global(.ms-DetailsList-contentWrapper)::-webkit-scrollbar-thumb {
         background: '[theme: neutralTertiary, default: #212121]';
         border-radius: 6px;
     }
